remove bottom overflow to avoid issues with popover outside screen now that height is fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,7 @@ body{
     width:100%;
     color: #716259;
     overflow-x:hidden;
+    overflow-y:hidden;
 }
 html,body{
     height:100%;
